# MysqlGear

./: README.md
DEBIAN/: control  postinst
example/client/php/src/: status.php  submit.php
example/client/php74/: composer.json
example/client/php74/src/: submit.php
src/: CMakeLists.txt  MysqlGearQueueEntry.h  README.MD  build_linux  build_linux_debug  config.h  exmaple_client.php  main.cpp  mysqlserver.h
src/files/: mysqlgear.service  server.conf
src/files/logrotate.d/: mysqlgear
src/files/rsyslog.d/: 01-mysqlgeard.conf
src/input/: InputHandler.cpp  InputHandler.h
src/input/inputs/: GearInputMessageTypes.h  GearServer.cpp  GearServer.h  GearStreamClientHandler.cpp  GearStreamClientHandler.h  GearStreamClientHandlerThread.cpp  GearStreamClientHandlerThread.h
src/output/: OutputHandler.cpp  OutputHandler.h
src/utils/daemonize/: CMakeLists.txt  daemonize.cpp  daemonize.h  main.cpp
src/utils/libzdb/: LibzdbHandler.cpp  LibzdbHandler.h
src/utils/lockedqueue/: CMakeLists.txt  LockedQueue.h  main.cpp
src/utils/tcpclientserver/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  main.cpp  tcpStructs.h
src/utils/threadpool/: ThreadpoolHandler.cpp  ThreadpoolHandler.h
src/utils/timedwaiter/: CMakeLists.txt  main.cpp  timed_waiter.h
